--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -61,10 +61,11 @@ snippets,vorlagen,lernen,verstehen,
 <div class="grid-container">
 <article class="content flow">
 
-<h1>Informationssicherheit</h1>
+<h1 id="bigHL">Informationssicherheit
+</h1><div class="inside-content">
+<div class="in-inside">
 
-<div class="in-inside"><dl>
-<h2>Schutzziele
+<dl><h2>Schutzziele
 </h2><dt><b>Vertraulichkeit
 </b></dt><dd>Nur autorisierte Zugriffe
 </dd><dt><b>Integrität
@@ -77,8 +78,9 @@ snippets,vorlagen,lernen,verstehen,
 </dt><dd>Nachverfolgbarkeit von Aktivitäten
 </dd><dt>Unbestreitbarkeit
 </dt><dd>Sicherstellung durchgeführter Handlungen
+</dd></dl>
 
-</dd></dl></div><div class="in-inside">
+</div><div class="in-inside">
 
 <h2>Datensicherheit
 </h2><p>Daten technisch und organisatorisch vor
