--- a/pages/Schutzziele.htm
+++ b/pages/Schutzziele.htm
@@ -61,30 +61,31 @@ snippets,vorlagen,lernen,verstehen,
 <div class="grid-container">
 <article class="content flow">
 
-<h2 id="bigHL">Informationssicherheit </h2>
-  <div class="inside-content">
-    <div class="in-inside">
-        <dl><h3>Schutzziele
-        </h3><dt><b>Vertraulichkeit
-        </b></dt><dd>Nur autorisierte Zugriffe
-        </dd><dt><b>Integrität
-        </b></dt><dd>Schutz vor Manipulation
-        </dd><dt><b>Verfügbarkeit
-        </b><dt><dd>Ausfallsicherheit
-        </dd><dt><b>Authentizität
-        </b></dt><dd>Verifizierte Quellen
-        </dd><dt><b>Zurechenbarkeit
-        </b></dt><dd>Nachverfolgbarkeit von Aktivitäten
-        </dd><dt><b>Unbestreitbarkeit
-        </b></dt><dd>Sicherstellung durchgeführter Handlungen
-        </dd></dl>
-    </div>
-    <div class="in-inside">
+<h1 id="bigHL">Informationssicherheit
+</h1><div class="inside-content">
+<div class="in-inside">
+
+<dl><h2>Schutzziele
+</h2><dt><b>Vertraulichkeit
+</b></dt><dd>Nur autorisierte Zugriffe
+</dd><dt><b>Integrität
+</b></dt><dd>Schutz vor Manipulation
+</dd><dt><b>Verfügbarkeit
+</b><dt><dd>Ausfallsicherheit
+</dd><dt>Authentizität
+</dt><dd>Verifizierte Quellen
+</dd><dt>Zurechenbarkeit;"
+</dt><dd>Nachverfolgbarkeit von Aktivitäten
+</dd><dt>Unbestreitbarkeit
+</dt><dd>Sicherstellung durchgeführter Handlungen
+</dd></dl>
+
+</div><div class="in-inside">
       <ul>
         <h3>### </h3>
 ######
 ######
-######
+######;"
         <h3>### </h3>
 ######
 ######
@@ -93,7 +94,7 @@ snippets,vorlagen,lernen,verstehen,
 ######
 ######
 ######
--->
+-->;"
       </ul>
     </div>
   </div>
