--- a/Cheats.htm
+++ b/Cheats.htm
@@ -34,7 +34,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo glow"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -78,15 +78,15 @@ snippets,vorlagen,lernen,verstehen,
 </code></dl></article><article class="content flow">
 <h2 class="bigHL">Entschlossenheit </h2>
 ...kennt keine Furcht, nur Gewissheit!
-<br><br><span class="kleintxt">"Ich bin ein Yakuzza der alten Schule, wenn ich sterben muss, dann soll es geschehen"
+<br><br><span class="klein">"Ich bin ein Yakuzza der alten Schule, wenn ich sterben muss, dann soll es geschehen"
 <br>-Brother (2000)</span></article><article class="content flow">
 <h2 class="bigHL">$ find / -type d -name '.*'</h2>
 <dl><b>h4x r3@1i+y f!nq |-|iqq3n p@+h</b><br><br>
-<span class="kleintxt">"Sometimes, to find the answer, you have to ask the right questions"
+<span class="klein">"Sometimes, to find the answer, you have to ask the right questions"
 <br>-Elliot Alderson (S2E2)</span>
 </article><article class="content flow">
-<h2 class="glowtxt">Biolumineszenz</h2>
-<p>Dies geschieht mithilfe von Enzymen und dem Molekül <span class="glowtxt">Luciferin</span>, abgeleiet von dem lateinischen Wort für "Lichtträger".&nbsp;Der&nbsp;Begriff wurde von dem französischen Chemiker Raphaël Dubois geprägt&nbsp;(19.&nbsp;Jahrhundert).</p>
+<h2 class="glow">Biolumineszenz</h2>
+<p>Dies geschieht mithilfe von Enzymen und dem Molekül <span class="glow">Luciferin</span>, abgeleiet von dem lateinischen Wort für "Lichtträger".&nbsp;Der&nbsp;Begriff wurde von dem französischen Chemiker Raphaël Dubois geprägt&nbsp;(19.&nbsp;Jahrhundert).</p>
 
 </article>
 </div>
@@ -104,7 +104,7 @@ snippets,vorlagen,lernen,verstehen,
 <img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
+<span class="jumi-email glow">contact&#64;jumi.biz</span>
 
 <span class="flex siteFeatures">
 <a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
