--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo glow"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -64,7 +64,7 @@ snippets,vorlagen,lernen,verstehen,
 <!-- print("hello world")  -->
 <h2>print("hello world") </h2>
     <p>Diese Website ist im Aufbau</p>
-	<ul class="kleintxt">
+	<ul class="klein">
 	<li>[2019-06]: Domain gemietet</li>
 	<li>[2020/21]: Konzeptentwicklung</li>
 	<li>[2022-11]: Ausarbeitung</li>
@@ -129,7 +129,7 @@ alt="Picture shows computer">
 <!--fix this br there
 --> <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und
     visuell-ergonomische Texte zu&nbsp;fragmentieren. Meine&nbsp;Quellen sind öffentliche Personen mit großer Reichweite und private&nbsp;Weiterbildungen.<br><br>
-    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
+    <span class="klein">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
 <article class="content flow">
@@ -138,7 +138,7 @@ alt="Picture shows computer">
 <h2 id="bigHL">Dark Mode Only</h2>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!<br><br>
-    <span class="kleintxt">"Come to the Dark Side" <br>-Darth Vader</span></p>
+    <span class="klein">"Come to the Dark Side" <br>-Darth Vader</span></p>
 
 </article>
 <article class="content flow">
@@ -152,7 +152,7 @@ alt="Picture shows computer">
     während&nbsp;Informations-Technologie Daten verarbeitet und&nbsp;speichert.
     Kung&nbsp;Fu beherrschen verlangt Reaktionsfähigkeit,&nbsp;
     bei&nbsp;Informationen entscheidet analytisches und logisches&nbsp;Denken.<br><br>
-    <span class="kleintxt">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</span></p>
+    <span class="klein">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</span></p>
 
 </article>
 <article class="content flow">
@@ -180,7 +180,7 @@ alt="Picture shows computer">
 <img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
+<span class="jumi-email glow">contact&#64;jumi.biz</span>
 
 <span class="flex siteFeatures">
 <a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
