--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -34,7 +34,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo glow"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -361,15 +361,15 @@ snippets,vorlagen,lernen,verstehen,
 </li></ul><li> Retrospektive
 
 </li></ul></ul><li><b> Integration
-</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung
-</span></span></li><li><b> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung
-</span></li><li><b> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan
-</span></li><li><b> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen
-</span></li><li><b> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation
-</span></li><li><b> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal
-</span></li><li><b> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze
-</span></li><li><b> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät
-</span></li><li><b> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen
+</a></b><span class="klein"> <span class="klein">Koordination / Zuweisung
+</span></span></li><li><b> Umfang</a></b><span class="klein"> Vorgaben / Überwachung
+</span></li><li><b> Zeitplanung</a></b><span class="klein"> Termine / Netzplan
+</span></li><li><b> Kosten</a></b><span class="klein"> Budgets / Kontrollmaßnahmen
+</span></li><li><b> Qualität</a></b><span class="klein"> Standards / Dokumentation
+</span></li><li><b> Ressourcen</a></b><span class="klein"> Arbeitsmittel / Personal
+</span></li><li><b> Kommunikation</a></b><span class="klein"> Hierarchie / Grundsätze
+</span></li><li><b> Risikoanalyse</a></b><span class="klein"> Notfallpläne / Flexibiltät
+</span></li><li><b> Beschaffung</a></b><span class="klein"> Kapazitäten / Bestellungen
 
 </span></li>
 
@@ -389,7 +389,7 @@ snippets,vorlagen,lernen,verstehen,
 <img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
+<span class="jumi-email glow">contact&#64;jumi.biz</span>
 
 <span class="flex siteFeatures">
 <a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
