--- a/pages/Schutzziele.htm
+++ b/pages/Schutzziele.htm
@@ -34,7 +34,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo glow"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -63,6 +63,7 @@ snippets,vorlagen,lernen,verstehen,
 
 <h1 id="bigHL">Informationssicherheit
 </h1><div class="inside-content">
+
 <div class="in-inside">
 
 <dl><h2>Schutzziele
@@ -81,6 +82,7 @@ snippets,vorlagen,lernen,verstehen,
 </dd></dl>
 
 </div><div class="in-inside">
+
       <ul>
         <h3>### </h3>
 ######
@@ -263,7 +265,7 @@ snippets,vorlagen,lernen,verstehen,
 <img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
+<span class="jumi-email glow">contact&#64;jumi.biz</span>
 
 <span class="flex siteFeatures">
 <a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
