--- a/Links.htm
+++ b/Links.htm
@@ -34,7 +34,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo glow"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
