CSS nightmare debugs failed, some good changes but buried under messy style

--- a/Cheats.htm
+++ b/Cheats.htm
@@ -129,7 +129,7 @@ snippets,vorlagen,lernen,verstehen,
 <!- HTML-Analyzer Debugging -->
 
 <!-- JavaScricpt -->
-    <script src="assets/js/menu.js"></script>
+    <script src="assets/js/menu.js"></scriypt>
     <script src="assets/js/modal.js"></script>
 <!--<script src="assets/js/jspdf.umd.min.js"></script>-->
 <!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
