--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 <!-- HTTP-Header -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!-- Metadaten -->
-<meta name="description" content="
 Sammlung von Themen über Informatik, kompakt.
-"><meta name="keywords" content="
+<meta name="keywords" content="
 linux,windows,sicherheit,hacking,
-administration,code,shell,terminal,syntax,
+administration,code,shell,terminal,syntax,a
 tool,programm,it,informatik,information,
 technologie,fachinformatik,computer,pc,
 system,netzwerk,integration,programmierung
-snippets,vorlagen,lernen,verstehen,
-"><meta name="author" content="Jumi">
+snippets,vorlagen,lernen,verstehen">
 <!-- Favicon -->
 <link rel="icon" href="assets/img/ico/jumi.ico">
 <title>jumi</title>
@@ -34,12 +32,11 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1><a id="jumi-logo" href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
 <button class="menu-toggle"
-        aria-controls="primary-navigation"
         aria-expanded="false">
   <span class="visually-hidden">Menu</span>
   <div class="hamburger" aria-hidden="true"></div>
@@ -64,7 +61,7 @@ snippets,vorlagen,lernen,verstehen,
 <!-- print("hello world")  -->
 <h2>print("hello world") </h2>
     <p>Diese Website ist im Aufbau</p>
-	<ul class="kleintxt">
+	<ul class="lil-txt">
 	<li>[2019-06]: Domain gemietet</li>
 	<li>[2020/21]: Konzeptentwicklung</li>
 	<li>[2022-11]: Ausarbeitung</li>
@@ -80,7 +77,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="in-inside">
 <h3><a href="https://www.jumi.biz/Content.htm">
 Themen:</a></h3>
-<ul>
+<ul class="lil-txt">
 <li>IT-Sicherheit </li>
 <li>IT-Systeme </li>
 <li>Pentesting </li>
@@ -100,7 +97,7 @@ Themen:</a></h3>
 <article class="content flow">
 
 <!-- $ whoami -->
-<h2 id="bigHL">&#36; whoami</h2>
+<h2>&#36; whoami</h2>
 
 <div class="flex">
 
@@ -129,22 +126,22 @@ alt="Picture shows computer">
 <!--fix this br there
 --> <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und
     visuell-ergonomische Texte zu&nbsp;fragmentieren. Meine&nbsp;Quellen sind öffentliche Personen mit großer Reichweite und private&nbsp;Weiterbildungen.<br><br>
-    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
+    <i class="lil-txt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</i></p>
 
 </article>
 <article class="content flow">
 
 <!-- Dark Mode Only -->
-<h2 id="bigHL">Dark Mode Only</h2>
+<h2>Dark Mode Only</h2>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!<br><br>
-    <span class="kleintxt">"Come to the Dark Side" <br>-Darth Vader</span></p>
+    <i class="lil-txt">"Come to the Dark Side" <br>-Darth Vader</i></p>
 
 </article>
 <article class="content flow">
 
 <!-- IT ~ Kung Fu -->
-<h2 id="bigHL">IT &#126; Kung Fu</h2>
+<h2>IT &#126; Kung Fu</h2>
     <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
     die&nbsp;durch lange, harte Übung und Geduld erlangt&nbsp;werden.
     Eine&nbsp;Disziplin, die zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
@@ -152,13 +149,13 @@ alt="Picture shows computer">
     während&nbsp;Informations-Technologie Daten verarbeitet und&nbsp;speichert.
     Kung&nbsp;Fu beherrschen verlangt Reaktionsfähigkeit,&nbsp;
     bei&nbsp;Informationen entscheidet analytisches und logisches&nbsp;Denken.<br><br>
-    <span class="kleintxt">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</span></p>
+    <i class="lil-txt">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</i></p>
 
 </article>
 <article class="content flow">
 
 <!-- Shownotes -->
-<h3 id="bigHL">Shownotes</h3>
+<h3>Shownotes</h3>
 	<ul><li>Kommasetzungs-KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
 	<li>Suchmaschinen-KI: <a href="https://you.com" target="_blank">you.com</a></li>
 	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
@@ -171,25 +168,24 @@ alt="Picture shows computer">
 </main>
 
 <!-- IMPRESSUM -->
-<footer><span class="flex profil-links">
+<footer><span class="flex downsite">
 
 <!-- github.com/xuser123 -->
-<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
-<img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
+<a href="https://www.github.com/xuser123" target="_blank">
+<img id="left-btn" src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
 
 <!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<a href="https://www.instagram.com/jumicontent" target="_blank">
 <img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
+<span class="mid-txt" id="jumi-email">contact&#64;jumi.biz</span>
 
-<span class="flex siteFeatures">
-<a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<!-- export as PDF (unsolved)-->
+<!--<a><img id="right-btn" src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;-->
 
-<!-- Zum Seitenanfang -Feature -->
-<a id="scrollToTop" href="#">
-<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang"></a>
+<!-- Zum Seitenanfang -->
+<a href="#"><img id="right-btn" src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang"></a>
 
 </span></footer>
 
