CSS hard-debugging

--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -62,9 +62,7 @@ snippets,vorlagen,lernen,verstehen,
 <article class="content flow">
 
 <h1 id="bigHL">Informationssicherheit
-</h1><div class="inside-content">
-
-<div class="in-inside">
+</h1>
 
 <dl><h2>Schutzziele
 </h2><dt><b>Vertraulichkeit
@@ -81,7 +79,6 @@ snippets,vorlagen,lernen,verstehen,
 </dt><dd>Sicherstellung durchgeführter Handlungen
 </dd></dl>
 
-</div><div class="in-inside">
 
 <h2>Datensicherheit
 </h2><p>Daten technisch und organisatorisch vor
@@ -111,8 +108,7 @@ snippets,vorlagen,lernen,verstehen,
 </li></ul></ul><li>Zugriffskontrollen
 </li><li>Sicherheitsaudits
 
-</li></ul></div>
-<div class="in-inside"><h2>Netzwerksegmentierung durch VLAN
+</li></ul></div><h2>Netzwerksegmentierung durch VLAN
 </h2><ul><li>Netze logisch trennen
 </li><li>Datenverkehr priorisieren
 </li><li>Last verteilen
