CSS hard-debugging

--- a/Content.htm
+++ b/Content.htm
@@ -59,7 +59,7 @@ snippets,vorlagen,lernen,verstehen,
 
 <div class="grid-container">
 <article class="content flow">
-<h2 id="bigHL">Informationssicherheit </h2>
+<h1 id="bigHL">Informationssicherheit </h1>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
@@ -151,7 +151,7 @@ snippets,vorlagen,lernen,verstehen,
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
-    <div class="in-inside">
+    <div class="in-inside disabled">
       <ul>
         <h3>### </h3>
         <li><b><a href="pages/###">###</a></b></li>
