CSS hard-debugging

--- a/Content.htm
+++ b/Content.htm
@@ -114,7 +114,7 @@ snippets,vorlagen,lernen,verstehen,
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
-    <div class="in-inside">
+    <div id="disabled" class="in-inside">
       <ul>
         <h3>### </h3>
         <li><b><a href="pages/###">###</a></b></li>
@@ -151,7 +151,7 @@ snippets,vorlagen,lernen,verstehen,
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
-    <div class="in-inside disabled">
+    <div id="disabled" class="in-inside">
       <ul>
         <h3>### </h3>
         <li><b><a href="pages/###">###</a></b></li>
