--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -58,14 +58,13 @@ snippets,vorlagen,lernen,verstehen,
 </ul></nav></div></header><main>
 
 <!-- MAIN -->
+<h1 id="bigHL">Informationssicherheit</h1>
 <div class="grid-container">
 <article class="content flow">
 
-<h1 id="bigHL">Informationssicherheit
-</h1>
-
-<dl><h2>Schutzziele
-</h2><dt><b>Vertraulichkeit
+<h2>Schutzziele</h2>
+<dl>
+<dt><b>Vertraulichkeit
 </b></dt><dd>Nur autorisierte Zugriffe
 </dd><dt><b>Integrität
 </b></dt><dd>Schutz vor Manipulation
@@ -108,7 +107,7 @@ snippets,vorlagen,lernen,verstehen,
 </li></ul></ul><li>Zugriffskontrollen
 </li><li>Sicherheitsaudits
 
-</li></ul></div><h2>Netzwerksegmentierung durch VLAN
+</li></ul><h2>Netzwerksegmentierung durch VLAN
 </h2><ul><li>Netze logisch trennen
 </li><li>Datenverkehr priorisieren
 </li><li>Last verteilen
@@ -672,7 +671,7 @@ snippets,vorlagen,lernen,verstehen,
 <ul><li>Offline- / Standby-USV, schützt vor Folgen bei…
 <ul><li>Stromausfall…</li></ul></li>
 <li>4-10 ms Umschaltzeit</li></ul></li></ul></li>
-</ul></td></tr></table>
+</ul>
 
 </article>
 </div>
