CSS hard-debugging

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ alt="Picture shows computer">
 </div>
 <!--fix this br there
 --> <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und
-    visuell-ergonomische Texte zu&nbsp;fragmentieren. Meine&nbsp;Quellen sind öffentliche Personen mit großer Reichweite und private&nbsp;Weiterbildungen.<br><br>
+    Lerninhalte für visuelle Ergonomie in minimalisierte Texte zu fragmentieren. Meine&nbsp;Inahlte sind öffentliche Personen mit großer Reichweite und private&nbsp;Weiterbildungen.<br><br>
     <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
