--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ alt="Picture shows computer">
 </div>
 <!--fix this br there
 --> <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und
-    Lerninhalte ergonomisch, in minimalisierte Texte zu fragmentieren. Meine&nbsp;Inahlte sind öffentliche Personen mit großer Reichweite und private&nbsp;Weiterbildungen.<br><br>
+    Lerninhalte ergonomisch, in minimalisierte Texte zu fragmentieren. Die&nbsp;Quellen meiner Inhalte sind von öffentlichen Personen mit großer Reichweite und aus private&nbsp;Weiterbildungen.<br><br>
     <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
