CSS hard-debugging

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="inside-content">
 <div class="in-inside">
 <h3><a href="https://www.jumi.biz/Content.htm">
-Themen:</a></h3>
+Themen</a></h3>
 <ul>
 <li>IT-Sicherheit </li>
 <li>IT-Systeme </li>
@@ -89,9 +89,9 @@ Themen:</a></h3>
 </ul>
 </div>
 <div class="in-inside">
-<h3>Navigation: </h3>
+<h3>Tasten-Navigation </h3>
     <link rel="stylesheet" href="https://www.jumi.biz/assets/css/word-as-button.css">
-    <ol><li><div class="keyboard-styled-word"><span>TAB</span></div> Selektieren </li>
+    <ol><li><div class="keyboard-styled-word"><span>TAB</span></div> Selektieren </li><br>
     <li><div class="keyboard-styled-word"><span>Enter</span></div> Öffnen </li></ol>
     <ul><li>Rückwärts selektieren<br><div class="keyboard-styled-word"><span>Shift</span></div> + <div class="keyboard-styled-word"><span>TAB</span></div></li></ul>
 </div>
@@ -128,7 +128,7 @@ alt="Picture shows computer">
 </div>
 <!--fix this br there
 --> <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und
-    Lerninhalte ergonomisch, in minimalisierte Texte zu fragmentieren. Die&nbsp;Quellen meiner Inhalte sind von öffentlichen Personen mit großer Reichweite und aus private&nbsp;Weiterbildungen.<br><br>
+    Lerninhalte ergonomisch, in minimalisierte Texte zu fragmentieren. Die Quellen meiner Inhalte sind von öffentlichen Personen mit großer Reichweite und aus private Weiterbildungen.<br><br>
     <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
@@ -159,14 +159,12 @@ alt="Picture shows computer">
 
 <!-- Shownotes -->
 <h3 id="bigHL">Shownotes</h3>
-	<ul><li>Kommasetzungs-KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
-	<li>Suchmaschinen-KI: <a href="https://you.com" target="_blank">you.com</a></li>
-	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
-	<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul></div>
+<ul><li>Kommasetzungs-KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
+<li>Suchmaschinen-KI: <a href="https://you.com" target="_blank">you.com</a></li>
+<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
+<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul>
 
 </article>
-</div>
-</main>
 </div>
 </main>
 
