CSS hard-debugging

--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -58,7 +58,7 @@ snippets,vorlagen,lernen,verstehen,
 </ul></nav></div></header><main>
 
 <!-- MAIN -->
-<h1 id="bigHL">Informationssicherheit</h1>
+<h1 id="bigHL glowtxt">Informationssicherheit</h1>
 <div class="grid-container">
 <article class="content flow">
 
