CSS hard-debugging

--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -59,9 +59,9 @@ snippets,vorlagen,lernen,verstehen,
 
 <!-- MAIN -->
 <div class="grid-container">
-<h1 id="flow bigHL glowtxt">Informationssicherheit</h1>
 <article class="content flow">
 
+<h1 id="bigHL glowtxt">Informationssicherheit</h1>
 <h2>Schutzziele</h2>
 <dl>
 <dt><b>Vertraulichkeit
