--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ alt="Picture shows computer">
 
 </div>
 <!--fix this br there
---> <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und
-    Lerninhalte ergonomisch,&nbsp;in&nbsp;minimalisierte Texte zu fragmentieren. Die Quellen meiner Inhalte sind von öffentlichen Personen mit großer Reichweite und aus private Weiterbildungen.<br><br>
+--> <br><p>Mir macht es&nbsp;Spass, mich&nbsp;mit IT zu beschäftigen und
+    Lerninhalte&nbsp;ergonomisch, in&nbsp;minimalisierte Texte zu&nbsp;fragmentieren. Die&nbsp;Quellen meiner Inhalte sind von öffentlichen Personen mit großer Reichweite und aus private Weiterbildungen.<br><br>
     <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
