CSS hard-debugging

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ alt="Picture shows computer">
 </div>
 <!--fix this br there
 --> <br><p>Mir macht es&nbsp;Spass, mich&nbsp;mit IT zu beschäftigen und
-    Texte für lernzwecke inhaltlich zu&nbsp;minimalisieren. Die&nbsp;Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
+    Texte für lernzwecke zu minimalisieren. Die&nbsp;Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
     <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
