CSS hard-debugging

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ alt="Picture shows computer">
 <!--fix this br there
 --> <br><p>Mir macht es&nbsp;Spass, mich&nbsp;mit IT zu beschäftigen und
     Texte für lernzwecke zu minimalisieren. Die&nbsp;Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
-    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
+    <span class="kleintxt">"<i>Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske</i>" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
 <article class="content flow">
@@ -138,7 +138,7 @@ alt="Picture shows computer">
 <h2 id="bigHL">Dark Mode Only</h2>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!<br><br>
-    <span class="kleintxt">"Come to the Dark Side" <br>-Darth Vader</span></p>
+    <span class="kleintxt">"<i>Come to the Dark Side</i>" <br>-Darth Vader</span></p>
 
 </article>
 <article class="content flow">
@@ -152,7 +152,7 @@ alt="Picture shows computer">
     während&nbsp;Informations-Technologie Daten verarbeitet und&nbsp;speichert.
     Kung&nbsp;Fu beherrschen verlangt Reaktionsfähigkeit,&nbsp;
     bei&nbsp;Informationen entscheidet analytisches und logisches&nbsp;Denken.<br><br>
-    <span class="kleintxt">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</span></p>
+    <span class="kleintxt">"<i>Der Meister erscheint wenn der Schüler bereit ist</i>" <br>-Karate Tiger (1986)</span></p>
 
 </article>
 <article class="content flow">
