--- a/Content.htm
+++ b/Content.htm
@@ -1,8 +1,7 @@
-<!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
-<!-- Optimierung für Mobilgeräte -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- HTTP-Header -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!DOCTYPE html><html lang="de"><head>
+<!-- Zeichenkodierung --><meta charset="utf-8">
+<!-- Optimierung für Mobilgeräte --><meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- HTTP-Header --><meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!-- Metadaten -->
 <meta name="description" content="
 Sammlung von Themen über Informatik, kompakt.
@@ -14,28 +13,21 @@ technologie,fachinformatik,computer,pc,
 system,netzwerk,integration,programmierung
 snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
-<!-- Favicon -->
-<link rel="icon" href="assets/img/ico/jumi.ico">
-<title>jumi</title>
-<!-- Debuger (falls nötig)
-        <meta http-equiv="refresh"y content="6">
-        <style>* {border: 1px solid red;}</style>-->
-
+<!-- Favicon --><link rel="icon" href="assets/img/ico/jumi.ico">
 <!-- Sheets -->
 <link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="assets/css/menu.css">
 <link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/modal.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
+<link rel="stylesheet" href="assets/css/menu.css">
+<link rel="stylesheet" href="assets/css/animations.css">
+<link rel="stylesheet" href="assets/css/modal.css">
 
-</head>
-<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
-<header>
-<div class="header-content">
+<title>j|Content</title>
+</head><body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
 
+<header><div class="header-content">
 <!-- LOGO -->
 <h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
-
 <!-- MENU -->
 <nav class="menu">
 <button class="menu-toggle"
@@ -45,7 +37,7 @@ snippets,vorlagen,lernen,verstehen,
   <div class="hamburger" aria-hidden="true"></div>
 </button>
 
-<ul data-state="closed" class="primary-navigation" id="primary-navigation">
+<ul id="primary-navigation" data-state="closed" class="primary-navigation">
 <li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
 <img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
 <li><a href="https://www.jumi.biz/Links.htm"><i class="menu-icon">
@@ -58,7 +50,7 @@ snippets,vorlagen,lernen,verstehen,
 </ul></nav></div></header><main>
 
 <div class="grid-container">
-<article class="content flow">
+<article id="Grid-Area-1" class="content flow">
 <h1 id="bigHL">Informationssicherheit </h1>
   <div class="inside-content">
     <div class="in-inside">
@@ -95,7 +87,7 @@ snippets,vorlagen,lernen,verstehen,
     </div>
   </div>
 </article>
-<article class="content flow">
+<article id="Grid-Area-2" class="content flow">
 <h1 id="bigHL">IT-Systeme </h1>
   <div class="inside-content">
     <div class="in-inside">
@@ -132,7 +124,7 @@ snippets,vorlagen,lernen,verstehen,
     </div>
   </div>
 </article>
-<article class="content flow">
+<article id="Grid-Area-3" class="content flow">
 <h1 id="bigHL">Pentesting </h1>
   <div class="inside-content">
     <div class="in-inside">
@@ -169,7 +161,7 @@ snippets,vorlagen,lernen,verstehen,
     </div>
   </div>
 </article>
-<article class="content flow">
+<article id="Grid-Area-4" class="content flow">
 <h1 id="bigHL">Projektmanagement </h1>
   <div class="inside-content">
     <div class="in-inside">
@@ -207,52 +199,86 @@ snippets,vorlagen,lernen,verstehen,
   </div>
 
 </article>
-</div>
-</main>
+<article id="Grid-Area-5" class="content flow">
+<h1 id="bigHL">### </h1>
+  <div class="inside-content">
+    <div class="in-inside">
+      <ul>
+        <h3>### </h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <h3>### </h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <h3>### </h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+      </ul>
+    </div>
+    <div id="disabled" class="in-inside">
+      <ul>
+        <h3>### </h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <h3>### </h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <h3>### </h3>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+      </ul>
+    </div>
+  </div>
+</article></div></main>
+
+<!-- HTML-Analyzer Debugging
+    <h1>HTML-Analyzer</h1>
+    <div id="analyzer" class="flex">
+    <h3>Tags:</h3>
+    <ul id="tagList"></ul>
+    <h3>Classes:</h3>
+    <ul id="classList"></ul>
+    <h3>IDs:</h3>
+    <ul id="idList"></ul>
+    </div>
+    <script src="assets/js/html-analyzer.js"></script> -->
 
 <!-- IMPRESSUM -->
-<footer><span class="flex profil-links">
-
+<footer><div class="footer-container">
+<div class="leftside-profil-icons">
 <!-- github.com/xuser123 -->
-<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<a id="github-link" href="https://www.github.com/xuser123" target="_blank">
 <img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
-
 <!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
-<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
-
+<a id="instagram-link" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
-
-<span class="flex siteFeatures">
-<a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
-
+<span id="contact-email">contact&#64;jumi.biz</span>
+<div class="rightside-site-features">
 <!-- Zum Seitenanfang -Feature -->
-<a id="scrollToTop" href="#">
-<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang"></a>
-
-</span></footer>
-
-<!-- HTML-Analyzer Debugging ->
-<h1>HTML-Analyzer</h1>
-<div class="flex">
-<h3>Tags:</h3>
-<ul id="tagList"></ul>
-<h3>Classes:</h3>
-<ul id="classList"></ul>
-<h3>IDs:</h3>
-<ul id="idList"></ul>
-</div>
-<script src="assets/js/html-analyzer.js"></script>
-<!- HTML-Analyzer Debugging -->
+<a id="goto-top" href="#"><img src="assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a>
+</div></div></footer>
 
 <!-- JavaScricpt -->
-    <script src="assets/js/menu.js"></script>
-    <script src="assets/js/modal.js"></script>
-<!--<script src="assets/js/jspdf.umd.min.js"></script>-->
-<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
-<!-- for Easteregg Project:-->
-<!--><script src="assets/js/read.js"></script>-->
+<script src="assets/js/menu.js"></script>
+<script src="assets/js/modal.js"></script>
 
-</body>
-</html>
+<!-- Debuger (falls nötig)-->
+    <meta http-equiv="refresh" content="6">
+    <style>* {border: 1px dotted #00B140;}</style>
+
+<!-- Export -Feature
+<span class="flex siteFeatures"><a id="exportIcon">
+<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<script src="assets/js/jspdf.umd.min.js">
+#https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js</script>-->
+<!-- for Easteregg Project:
+<script src="assets/js/read.js"></script>-->
+
+</body></html>
