--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -1,40 +1,31 @@
-<!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
-<!-- Optimierung für Mobilgeräte -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- HTTP-Header -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- Metadaten -->
-<meta name="description" content="
-Sammlung von Themen über Informatik, kompakt.
-"><meta name="keywords" content="
+<!DOCTYPE html><html lang="de"><head>
+<!-- Zeichenkodierung --><meta charset="utf-8">
+<!-- Optimierung für Mobilgeräte --><meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- HTTP-Header --><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- Metadaten --><meta name="description" content="Sammlung von Themen über Informatik, kompakt.">
+<meta name="keywords" content="
 linux,windows,sicherheit,hacking,
 administration,code,shell,terminal,syntax,
 tool,programm,it,informatik,information,
 technologie,fachinformatik,computer,pc,
 system,netzwerk,integration,programmierung
-snippets,vorlagen,lernen,verstehen,
-"><meta name="author" content="Jumi">
-<!-- Favicon -->
-<link rel="icon" href="../assets/img/ico/jumi.ico">
-<title>jumi</title>
-<!-- Debuger (falls nötig)
-        <meta http-equiv="refresh"y content="6">
-        <style>* {border: 1px solid red;}</style>-->
-
+snippets,vorlagen,lernen,verstehen,"><meta name="author" content="Jumi">
+<!-- Favicon --><link rel="icon" href="../assets/img/ico/jumi.ico">
 <!-- Sheets -->
 <link rel="stylesheet" href="../assets/css/style.css">
-<link rel="stylesheet" href="../assets/css/menu.css">
 <link rel="stylesheet" href="../assets/css/main.css">
-<link rel="stylesheet" href="../assets/css/modal.css">
 <link rel="stylesheet" href="../assets/css/media-queries.css">
+<link rel="stylesheet" href="../assets/css/menu.css">
+<link rel="stylesheet" href="../assets/css/animations.css">
+<link rel="stylesheet" href="../assets/css/modal.css">
 
-</head>
-<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
-<header>
-<div class="header-content">
+<title>jumi</title>
+</head><body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
+
+<header><div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo glow"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -673,53 +664,50 @@ snippets,vorlagen,lernen,verstehen,
 <li>4-10 ms Umschaltzeit</li></ul></li></ul></li>
 </ul>
 
-</article>
-</div>
-</main>
+</article></div></main>
+
+<!-- HTML-Analyzer Debugging
+    <h1>HTML-Analyzer</h1>
+    <div id="analyzer" class="flex">
+    <h3>Tags:</h3>
+    <ul id="tagList"></ul>
+    <h3>Classes:</h3>
+    <ul id="classList"></ul>
+    <h3>IDs:</h3>
+    <ul id="idList"></ul>
+    </div>
+    <script src="../assets/js/html-analyzer.js"></script> -->
 
 <!-- IMPRESSUM -->
-<footer><span class="flex profil-links">
-
+<footer><div class="footer-container">
+<div class="leftside-profil-icons">
 <!-- github.com/xuser123 -->
-<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<a id="github-link" href="https://www.github.com/xuser123" target="_blank">
 <img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
-
 <!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
-<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
-
+<a id="instagram-link" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
 <!-- contact@jumi.biz -->
-<span class="jumi-email glow">contact&#64;jumi.biz</span>
-
-<span class="flex siteFeatures">
-<a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
-
-<!-- Zum Seitenanfang -->
-<a id="scrollToTop" href="#">
-<img src="../assets/img/ico/backTop.ico" alt="Zum Seitenanfang"></a>
-
-</span></footer>
-
-<!-- HTML-Analyzer Debugging ->
-<h1>HTML-Analyzer</h1>
-<div class="flex">
-<h3>Tags:</h3>
-<ul id="tagList"></ul>
-<h3>Classes:</h3>
-<ul id="classList"></ul>
-<h3>IDs:</h3>
-<ul id="idList"></ul>
-</div>
-<script src="../assets/js/html-analyzer.js"></script>
-<!- HTML-Analyzer Debugging -->
+<span id="contact-email">contact&#64;jumi.biz</span>
+<div class="rightside-site-features">
+<!-- Zum Seitenanfang -Feature -->
+<a id="goto-top" href="#"><img src="../assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a>
+</div></div></footer>
 
 <!-- JavaScricpt -->
-    <script src="../assets/js/menu.js"></script>
-    <script src="../assets/js/modal.js"></script>
-<!--<script src="../assets/js/jspdf.umd.min.js"></script>-->
-<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
-<!-- for Easteregg Project:-->
-<!--><script src="../assets/js/read.js"></script>-->
+<script src="../assets/js/menu.js"></script>
+<script src="../assets/js/modal.js"></script>
 
-</body>
-</html>
+<!-- Debuger (falls nötig)-->
+    <meta http-equiv="refresh" content="6">
+    <style>* {border: 1px dotted #00B140;}</style>
+
+<!-- Export -Feature
+<span class="flex siteFeatures"><a id="exportIcon">
+<img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<script src="assets/js/jspdf.umd.min.js">
+#https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js</script>-->
+<!-- for Easteregg Project:
+<script src="assets/js/read.js"></script>-->
+
+</body></html>
