--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ snippets,vorlagen,lernen,verstehen,
 	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. </p>
 
 <div class="inside-content flex">
-<div class="in-inside content flow">
+<div class="in-inside">
 <h3><a href="https://www.jumi.biz/Content.htm">
 Themen</a></h3>
 <ul>
